<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/>
    </parent>

    <groupId>dev.jaczerob.delfino</groupId>
    <artifactId>delfino-parent</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>network</module>
        <module>grpc-proto</module>
        <module>mdrs</module>
        <module>channel</module>
        <module>elm</module>
        <module>world</module>
        <module>tools</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <graalvm-js.version>23.0.4</graalvm-js.version>
        <graalvm-js-scriptengine.version>24.0.1</graalvm-js-scriptengine.version>
        <grpc.version>1.77.0</grpc.version>
        <jcip-annotations.version>1.0</jcip-annotations.version>
        <jdbi-version>3.49.5</jdbi-version>
        <netty.version>4.2.2.Final</netty.version>
        <protobuf-java.version>4.33.1</protobuf-java.version>
        <rhino.version>1.9.0</rhino.version>
        <spring-grpc.version>1.0.0</spring-grpc.version>
        <yamlbeans.version>1.17</yamlbeans.version>

        <protobuf-maven-plugin.version>4.0.3</protobuf-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.jaczerob.delfino.common</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.jaczerob.delfino.grpc</groupId>
                <artifactId>grpc-proto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.jaczerob.delfino.network</groupId>
                <artifactId>network</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf-java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>${spring-grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.esotericsoftware.yamlbeans</groupId>
                <artifactId>yamlbeans</artifactId>
                <version>${yamlbeans.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jcip</groupId>
                <artifactId>jcip-annotations</artifactId>
                <version>${jcip-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mozilla</groupId>
                <artifactId>rhino</artifactId>
                <version>${rhino.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jdbi</groupId>
                <artifactId>jdbi3-core</artifactId>
                <version>${jdbi-version}</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec-native-quic</artifactId>
                <version>${netty.version}</version>
            </dependency>

            <dependency>
                <groupId>org.graalvm.js</groupId>
                <artifactId>js</artifactId>
                <version>${graalvm-js.version}</version>
            </dependency>
            <dependency>
                <groupId>org.graalvm.js</groupId>
                <artifactId>js-scriptengine</artifactId>
                <version>${graalvm-js-scriptengine.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.github.ascopes</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf-maven-plugin.version}</version>
                    <configuration>
                        <protoc>${protobuf-java.version}</protoc>
                        <binaryMavenPlugins>
                            <binaryMavenPlugin>
                                <groupId>io.grpc</groupId>
                                <artifactId>protoc-gen-grpc-java</artifactId>
                                <version>${grpc.version}</version>
                                <options>@generated=omit</options>
                            </binaryMavenPlugin>
                        </binaryMavenPlugins>
                    </configuration>
                    <executions>
                        <execution>
                            <id>generate</id>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
